Fix: Tooltip for consumables are used instantly
Bug: Prevent candle uses when dead
Bug: Take All breaks
Bug: red text
Bug: help sheet
Bug:Shopkeeper's wax display did not show up if two toast notifications were present
Bug: ToastPanel's don't fade in properly all the time  (don't know whats cuasing this)
Strange red colouring for some items
Make buffs and debuffs refresh
Class select now easier to read
Make advantage status effect better
Add bonus PDEF and MDEF to monsters (negative for wraiths cause their MDEF shouldn't be high)
Balance: Nerfed Bash, Taunt now costs 2 less MP
Added tutorial for champion and consumables
Add toast notification flame
Updated several sprites for background stuff
Tweaked ending bleed damage to increase sense of false hope
Added 7th skills
Feature: Added more split raods events and doll pouch
Bug: EXP calculation for champion monstesr mixed with normal version is wrong
Bug: Placing items in equipped slots increments spare

CURRENTLY DOING
---------------


Bug: Item displays for eventDisplays is off

Speed Runner Tester: Jeffrey Zhao

VERIFICATION NEEDED
-------------------
Bug: Candlemancy kinda bugged but need to figure out why 



NEAR FUTURE
----------------
Fix: Put all loading for everything at the start
Feature: Sound effects and music
Feature: Saving
Feature: Ending and beginning cutscenes
Feature: Gameover screen

FUTURE/MAYBE
------------
UI: Make quest completed notification seperate from normal completition
Fix: Make it so active skills are greyed out if 4 actives are already selected
Fix: Make a way to halt a fading coroutine should another one start
UI: Make status effects do the fade animation monster displays do
UI: status effects don't display in the statusPanel
UI: Add heal/focus animations on effect
Future: Add combat order on the side
Future: Animation skip on click
UI: Tiny arrow to swap party member
Tutorial: Clicking actions progresses the tutorial, but this might not be the worst thing




