@@ -8,6 +8,7 @@
 */
 
 using UnityEngine;
+using UnityEngine.UI;
 
 namespace PlayerUI {
 
@@ -17,6 +18,7 @@ namespace PlayerUI {
 
         public Color32 unusableColour = new Color32(196, 36, 48, 255);  /// <value> Red colour to indicate unusable, stored here to minimize space </value>
         public Color32 subtitleColour = new Color32(178, 178, 178, 255);  /// <value> Grey colour for subtitles, stored here to minimize space </value>
+        public ColorBlock orangeBlock = new ColorBlock();
         public ItemDisplay heldItemDisplay;
         public bool panelButtonsEnabled = true;
         public bool inShop = false;                 /// <value> Flag for if the player is currently in a shop </value>
@@ -32,6 +34,13 @@ namespace PlayerUI {
                 DestroyImmediate(gameObject);
                 instance = this;
             }
+
+            orangeBlock.normalColor = new Color32(230, 126, 34, 200);
+            orangeBlock.highlightedColor = new Color32(230, 126, 34, 255);
+            orangeBlock.pressedColor = new Color32(230, 126, 34, 150);
+            orangeBlock.disabledColor = new Color32(230, 126, 34, 84);
+            orangeBlock.colorMultiplier = 1;
+            orangeBlock.fadeDuration = 0.1f;
         }
         
         /// <summary>
